Removed show form fter loading page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </header>
       <section class="summary-container"></section>
     </section>
-    <section class="modal-block show-modal-block">
+    <section class="modal-block">
       <!-- create modal -->
       <div class="modal create-modal">
         <i class="fa-solid close-btn fa-xmark"></i>
@@ -100,7 +100,7 @@
       </div>
       <!--  -->
       <!-- edit modal -->
-      <div class="modal edit-modal show-modal">
+      <div class="modal edit-modal">
         <i class="fa-solid close-btn fa-xmark"></i>
         <h4>Edit Note</h4>
         <form class="modal-form edit-modal-form">
